--- a/scss/_perfil.scss
+++ b/scss/_perfil.scss
@@ -1,3 +1,16 @@
 body {
     margin: 0;
 }
+
+section{
+    .texto-perfil{
+        color: $colorPrincipal;
+    }
+    
+}
+
+.footerPerfil{
+    .footer-color{ 
+        background-color: $colorPrincipal;
+    }
+}
